Modify research statement and resume

--- a/resume_2018/research_statement.tex
+++ b/resume_2018/research_statement.tex
@@ -53,39 +53,43 @@
 
 My research interest is in the experimental particle physics and computing.
 In particular, I am interested in applying the machine learning techniques to improve the analysis results.
-I got Ph.D degree from the University of Oklahoma (OU) at May 2018 and I am currently working as temporary research assistant at OU HEP group to help my advisor Dr. Skubic on the supersymmetry (SUSY) search in Non-Universal Higgs Mass Model with 2 extra parameters (NUHM2).
-I also have some experiences on neutrino physics and $B$-physics.
+I received my Ph.D degree from the University of Oklahoma (OU) at May 2018 and I am currently working as a postdoctoral researcher at OU HEP group on the supersymmetry (SUSY) search in Non-Universal Higgs Mass Model with 2 extra parameters (NUHM2).
+For the past three years, I had the opportunity to stationed at CERN to participate in the ATLAS collaboration to work with many excellent physicists.
+I have played an important role in the electron isolation measurement and contributed to the recommendation.
+All of the analysis groups in ATLAS collaboration using isolated electrons in their study have to adopt the recommendation to calibrate the difference between the Monte Carlo simulated events and data.
+My dissertation search has provided me with a unique experience working on the radiative natural SUSY which provided a possible explanation of the existence of SUSY particles while maintains the Higgs mass unchanged and no large cancellations at the electroweak scale.
+In addition, I also have some experiences on neutrino physics and $B$-physics.
 
 %%%%%
 
 \section{Current and Previous Research}
-My Ph.D research at the University of Oklahoma (2011 to 2018) was focused on searching the supersymmetry particles at the ATLAS detector.
+My Ph.D research at the University of Oklahoma (2011 to 2018) was focused on searching for the supersymmetric particles at the ATLAS detector.
 After passing the written and oral Ph.D. qualifier exams, I relocated to CERN (2015 to 2018) and participated in the same-sign/3L and Higgsino LSP analysis groups.
-Beside searching for the SUSY particles, I also measured the electron isolation scale factors and provided the results as the ATLAS $E/\gamma$ recommendations by the Combined Performance group.
+Beside searching for the SUSY particles, I also measured the electron isolation scale factors and provided the results as the ATLAS $E/\gamma$ recommendations by the Combined Performance (CP) group.
 
 \subsection{Electron isolation efficiency}
 It is very important to calibrate the simulated electron events to data collected by the ATLAS detector because almost all of the analysis groups need to consider the electrons in their studies.
-The $E/\gamma$ CP group developed a Tag-and-Probe frame to measure the electron reconstruction, identification,  isolation, and trigger efficiencies.
+The $E/\gamma$ CP group developed a Tag-and-Probe framework to measure the electron reconstruction, identification,  isolation, and trigger efficiencies.
 I co-developed and maintained the measurement of the electron isolation part in Tag-and-Probe framework.
-The electron isolation efficiencies for various combinations of isolation working points and electron id working points were measured and the data to MC scale factors were calculated using $Z \to ee$ events.
-The scale factors cover  a range in $E_{\textrm{T}}$ from 7 to 200 GeV and $|\etaη| < 2.47$.
+The electron isolation efficiencies for various combinations of isolation working points and electron ID working points were measured and the data to MC scale factors were calculated using $Z \to ee$ events.
+The scale factors cover  a range in $E_{\textrm{T}}$ from 7 to 200 GeV and $|\eta| < 2.47$.
 In 2015 and 2016, I released 5 recommendations in total and the most important two are the recommendations for Moriond and ICHEP 2016.
-While working on the measurement of the electron isolation efficiencies, I also help di-photon group study the isolation efficiencies using photon isolation working points.
-And a journal paper at a di-photon invariant mass around 750 GeV was publish.
+While working on the measurement of the electron isolation efficiencies, I also help di-photon group to study the isolation efficiencies using photon isolation working points.
+And a journal paper at a di-photon invariant mass around 750 GeV was published.
 
 \subsection{Same-sign 3 leptons plus jets}
-With the experience in electron isolation measurement, I was working on the real lepton efficiency measurement for the same-sign/3 leptons plus jets analysis.
-I developed a new framework utilized the EventLoop algorithm which provides all advantages of the object oriented programming.
+With the experience in measuring the electron isolation efficiency, I worked on the real lepton efficiency measurement for the same-sign/3 leptons plus jets analysis.
+I developed a new framework utilizing the EventLoop algorithm which provides all advantages of the object oriented programming.
 The filtration function of my new framework can reduce the size of datasets by more than a factor of ten which improving the processing speed.
-The automation function of my new framework provided a convenience way to calculate the real lepton efficiency and make the final tables and figures.
-It takes about one week manual operations to get the results for 3.2 fb$^{-1}$ using the old framework.
-However, it only takes one afternoon to process 36 fb$^{-1}$ results using my new real lepton efficiency framework.
-With this great improvement, the isolation forum convenors asked my to give a presentation in their meeting and added my my framework as an auxiliary tools for the isolation package.
+The automation function of my new framework provided a convenient way to calculate the real lepton efficiency and make the final tables and figures on the fly.
+It takes about one week manual operations to get 3.2 fb$^{-1}$ results using the old framework.
+However, it only takes one afternoon to get 36 fb$^{-1}$ results using my new real lepton efficiency framework.
+With this great improvement, the isolation forum convenors asked me to give a presentation in their meeting and added my framework as an auxiliary tools for the isolation package.
 
 \subsection{Non-Universal Higgs Mass model}
-I worked on searching for the Higgsino LSP in the Non-Universal Higgs Mass model with two extra parameters (NUHM2) as my dissertation.
-The NUHM2 decouples the Higgs mass doublet parameters $m^{2}_{H_{u}}$ and $m^{2}_{H_{d}}$ at the GUT scale such that $m^{2}_{H_{u}} \neq m^{2}_{H_{d}} \neq m^{2}_{0}(m_{\textrm{GUT}})$ leading to a low fine-tuning $\Delta_{EW}$ values at the electroweak scale and keeping electroweak maturalness.
-The low electroweak fine-tuning (EWFT) in the NUHM2 model maintains the Higgs mass $\sim 125$ GeV and $Z$ boson mass $m_{Z} = 91.2$ GeV and requires no large cancellations at the electroweak scale. 
+I worked on searching for the Higgsino LSP in NUHM2 model as my dissertation.
+The NUHM2 decouples the Higgs mass doublet parameters $m^{2}_{H_{u}}$ and $m^{2}_{H_{d}}$ at the GUT scale such that $m^{2}_{H_{u}} \neq m^{2}_{H_{d}} \neq m^{2}_{0}(m_{\textrm{GUT}})$ leading to a low fine-tuning $\Delta_{EW}$ values at the electroweak scale and keeping electroweak naturalness.
+The low electroweak fine-tuning (EWFT) in the NUHM2 model maintains the Higgs mass $\sim$125 GeV and $Z$ boson mass $m_{Z} = 91.2$ GeV and requires no large cancellations at the electroweak scale. 
 It expects the light Higgsino masses to be 100 $\sim$ 300 GeV and the electroweak gaugino masses 300 $\sim$ 1200 GeV which are reachable by the current LHC energy scale.
 We produced the MC simulations for the NUHM2, re-weighted the simplified Higgsino model to the NUHM2, and applied all the event selections, reconstruction, background suppression processes to optimize the signal.
 Finally, the cross-section at next-to-leading-logarithm (NLL) accuracy was estimated using HistFitter to fit the signal and background simultaneously and the upper limit at the 95\% CL were provided.
@@ -96,23 +100,23 @@ The TEXONO experiment aimed to measure the neutrino coming from the nuclear reac
 My main duty in TEXNON was using GEANT4 package to develop the simulation program of the high purity germanium detector and studied the ambient background radiation.
 I also had one month business trip to China to help Tsinghua university to build the the China Jinping Underground Laboratory (CJPL).
 
-My master period (2003 to 2006) was working on the $B$-physics at the Belle experiment.
-The topic of my master thesis is "Measurements of branching fractions and CP asymmetries in $B \to \phi \phi K$ decays at Belle". 
-My results was planned to submit to PRD.
-However, the internal review process was too slow and I didn't have much time to work on it after I graduated and worked in the industry resulting in my results only published on the arXiv~\cite{Abe:2006qy, Shen:2008pr}.
+My Masters period (2003 to 2006) was working on the $B$-physics at the Belle experiment.
+The topic of my Masters thesis is "Measurements of branching fractions and CP asymmetries in $B \to \phi \phi K$ decays at Belle".~\cite{Abe:2006qy, Shen:2008pr}
+%My results was planned to submit to PRD.
+%However, the internal review process was too slow and I didn't have much time to work on it after I graduated and worked in the industry resulting in my results only published on the arXiv~\cite{Abe:2006qy, Shen:2008pr}.
 
 %%%%%
 
 \section{Other Research Interests}
 Because the significant enhancement of the computing power especially in the CPU and GPU processing speed, machine learning gets more attention in recent years. 
-The high energy physics community starts to adopt the machine learning techniques in analyzing the experiment datasets.
+The high energy physics community starts to adopt the machine learning techniques in analyzing the experiment data sets.
 There are more and more analysis groups in the ATLAS experiment using boost decision tree (BDT) and neural network (NN) and the same situation also happens in the CMS experiment.
-For example, a NN is used to improve the background rejection and extract the signal in the single top quark analysis group leading by OU. The resulting significance is 4.2 $\sigma$ in the data~\cite{Aaboud:2017ylb}.
+For example, a NN is used to improve the background rejection and extract the signal in the single top quark analysis group lead by OU. The resulting significance is 4.2 $\sigma$ in the data~\cite{Aaboud:2017ylb}.
 
 I am very interested in learning and applying the machine learning techniques on the  data analysis.
 After graduated from OU, I spent a lot of efforts in learning the knowledge and skills of  machine learning.
 The data manipulation using Python Pandas package and the machine learning using Python Scikit-learn package became part of my skills.
-I have been applied the machine learning models such as linear regression, logistic regression, SVM, kNN, decision tree, and random forest to some projects for practicing purpose and wish these skills can be applied on the particle physics experimental data to help the analysis.
+I have been applying the machine learning models such as linear regression, logistic regression, SVM, kNN, decision tree, and random forest to some projects for practicing purpose and wish these skills can be applied on the particle physics experimental data to help the analysis.
 
 %%%%%
 
