--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -50,47 +50,71 @@
 
 \raggedright{
     Programming Language:
-    C/C++
-    \textbullet{}
-    Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn)
-    \textbullet{}
+    C/C++,
+    % \textbullet{}
+    Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn),
+    % \textbullet{}
+    R,
+    % \textbullet{}
     BASH shell script\\
     % \textbullet{}
-    Machine Learning:
-    supervised (kNN, linear/logistic regression, decision tree, SVM)
-    \textbullet{}
-    unsupervised (k-Means)\\
-    % \textbullet{}
-    Statistics:
-    LSE
-    \textbullet{}
-    MLE
-    \textbullet{}
-    Hypothesis test
-    \textbullet{}
-    A/B test
-    \textbullet{}
-    bootstrapping\\
-    % \textbullet{}
     % VBA
+    % Visual Basic\\
+    % \textbullet{}
+    Machine Learning:
+    feature engineering,
+    data scraping,
+    classification,
+    % kNN
+    % \textbullet{}
+    linear/logistic regression,
+    % \textbullet{}
+    decision tree,
+    % \textbullet{}
+    % SVM
+    % \textbullet{}
+    % k-Means
+    % \textbullet{}
+    clustering
+    NLP\\
+    Statistics:
+    Regression (LSE/MLE),
+    % \textbullet{}
+    Confidence intervals,
+    % \textbullet{}
+    Monte Carlo method,
+    % \textbullet{}
+    Hypothesis test,
+    % \textbullet{}
+    A/B test,
+    % \textbullet{}
+    bootstrapping,
+    % \textbullet{}
+    Bayesian\\
     % \textbullet{}
     % Git/SVN
     % \textbullet{}
     Version Control:
-    Git\\
-    % \textbullet{}
+    Git
+    \textbullet{}
     Database:
-    SQL
-    % \textbullet{}
-    % Mac OS/Linux
-    % \textbullet{}
-    % Microsoft Office/Apple Keynote/Pages
-    % \textbullet{}
-    % HTML \textbullet{}
+    SQL\\
+    % Framework:
+    % ROOT\\
+    % Others:
     % \LaTeX\
     % \textbullet{}
-    % Vim \textbullet{}
-    % ROOT framework \textbullet{} 
+    % HTML
+    % 
+    % Mac OS/Linux
+    % \textbullet{}
+    % Office:
+    % Microsoft Office/Apple Keynote/Pages\\
+    % \textbullet{}
+    % \textbullet{}
+    % 
+    % \textbullet{}
+    % Vim
     % \textbullet{}
     % Data analysis (detail)
     % \textbullet{}
@@ -104,27 +128,51 @@
 %     Project
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% FOR RESUME
+% % FOR RESUME
 \section{Projects}
 
-% \raggedright{
-% 	MuscleHub AB Test \textbullet{} National park biodiversity \textbullet{} Exploring LEGO bricks \textbullet{} Discovery of handwashing \textbullet{} The GitHub history of the Scala language \textbullet{} 3-year loans
-% }
+% % \runsubsection{project name}
+% % \descript{}
+% % %\location{}
+% % \begin{tightemize}
+% % \item What I did on the project which is most important
+% % \end{tightemize}
+% % \sectionsep
 
-% \runsubsection{project name}
-% \descript{}
-% %\location{}
-% \begin{tightemize}
-% \item What I did on the project which is most important
-% \end{tightemize}
-% \sectionsep
-
-\runsubsection{Real Lepton Efficiency}
-% \descript{}
+\runsubsection{Upstart 3-year Terms Loan Charged-off Rate Prediction}
+% \descript{| Graduate work}
 \location{}
 \begin{tightemize}
-\item Classified particles to improve the real lepton identification efficiency from 80\% to 98\%.
-\item Designed data filtration algorithms in C++ reducing the data size by a factor of 100.
+\item Analyzed 50,000 loans with different repayment status within two years to extract the monthly default rate.
+\item Predicted the charged-off rate by the time all 3-year terms finished using linear regression.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Capital Bikeshare Rental Demand}
+% \descript{| Graduate work}
+\location{}
+\begin{tightemize}
+\item Performed feature selection and engineering to remove 3 standard deviations outliers and created new datetime features.
+\item Visualized the weather information and imputed missing data using the random forest model based estimation.
+\item Used random forest model to predict the total count of bikes rented during each hour of the last 10 days in each month.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{INSPIRE HEP PostDoc Position in North America}
+% \descript{| Private project}
+\location{}
+\begin{tightemize}
+\item Scraped website using Beautiful Soup and converted results into SQL database using sqlalchemy.
+\item Leveraged natural language processing (NLP) and machine learning to build model to predict experiments which institution participates.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Real Lepton Efficiency}
+% \descript{| Graduate work}
+\location{}
+\begin{tightemize}
+\item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
+\item Designed data filtration algorithms in C++ reducing the data size from $\sim$400 TB to less than 200 GB.%by a factor of 100.
 \item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
 \end{tightemize}
 \sectionsep
@@ -135,37 +183,38 @@
 
 \section{Experience}
 
-\runsubsection{University of Oklahoma}
-\descript{| Graduate Research and Teaching Assistant}
-\location{2011 - 2018 | Norman, Oklahoma}
-\begin{tightemize}
-% FOR RESUME & CV
-\item 6 semesters teaching assistant for college and graduate level courses.
-% \item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
+% \runsubsection{University of Oklahoma}
+% \descript{| Graduate Research and Teaching Assistant}
+% \location{2011 - 2018 | Norman, Oklahoma}
+% \begin{tightemize}
+% % FOR RESUME & CV
+% \item 6 semesters teaching assistant for college and graduate level courses.
+% % \item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
 % \item Stationed at CERN and dedicated to search for supersymmertic particles since 2015.
-% \item Relocated to CERN since 2015. Analyzed large experimental datasets to search for supersymmertic particles among other duties.
-\end{tightemize}
-\sectionsep
+% % \item Relocated to CERN since 2015. Analyzed large experimental datasets to search for supersymmertic particles among other duties.
+% \end{tightemize}
+% \sectionsep
 
 \runsubsection{Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire (CERN)}
 \descript{| Graduate Research Assistant}
 \location{2015 - 2018 | Geneva, Switzerland}
 \begin{tightemize}
 % FOR RESUME
+\item Performed the data mining from the distributed LHC computing Grid, applied data cleaning and feature engineering to select the significant data, visualized the data distributions, fitted the model using least chi-square regression, interpreted the results using statistical model within 95\% confidence intervals, and presented and documented the analysis findings.
 \item Calibrated the electron isolation efficiency by analyzing 30M+ events and became the standard version of the collaboration. %The results became a central released version of the collaboration.
 % \item Mined and cleaned data from the distributed LHC computing Grid over 170 computing centers in 42 countries using Rucio.
-\item Mined and cleaned data from the distributed LHC computing Grid using Rucio.
 % \item Mined data from Grid and wrote data filtering algorithm to reduce the data size from $\sim$400 TB to less than 200 GB and signficantly speed up processing time of data analysis.
 % \item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total using methods including Monte Carlo simulation, event selection and reconstruction, background suppression etc. (i.e. EDA, feature processing, and feature engineering). 
+% \item Produced Monte Carlo (MC) simulation datasets and performed exploratory data analysis (EDA) on MC datasets.
 % Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space (i.e. model fitting and statistics hypothesis test).
-\item Analyzed $\sim$200 GB large datasets with 400+ variables per file and $\sim$30M entries in total by performing EDA, feature processing and engineering, LSE and MLE model fitting, and statistics hypothesis test.
+% \item Analyzed $\sim$200 GB large datasets with 400+ variables per file and $\sim$30M entries in total by performing exploratory data analysis (EDA), feature processing and engineering, least square estimation (LSE) and maximum likelihood estimation (MLE) model fitting, and statistics hypothesis test.
 
 
 % FOR CV
 % \item Participated in E/gamma combine performance group, same-sign 3 leptons + jets analysis group, and Higgsino LSP analysis group.
 % Mainly contributed on electron isolation measurement, real lepton efficiency measurement, and Non-Universal Higgsino Mass model with 2 extra parameters (NUHM2) search.
-% \item Calibrated the electron isolation efficiency by analyzing $e/\gamma$ events. The results became a central released version of the ATLAS collaboration.
-% \item Used C++ and Python to implement toy Monte Carlo, event selection and reconstruction, background suppression, maximum likelihood, and least Chi square fit to analyze collision data within 95\% confidence level.
+% \item Calibrated the electron isolation efficiency by analyzing $Z \to ee$ events using Tag-and-Probe method. The results became ATLAS recommendations. %The results became a central released version (recommendation) of the ATLAS collaboration.
+% \item Used C++ and Python to implement Monte Carlo, event selection and reconstruction, background suppression, maximum likelihood, and least Chi square fit to analyze collision data within 95\% confidence level.
 % % The various analysis methods such as Monte Carlo simulation, candidates extraction, noise suppression, maximum likelihood estimation are implemented.
 % % Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
 % % The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
@@ -184,7 +233,9 @@
 \location{2009 - 2011 | Taipei, Taiwan}
 \begin{tightemize}
 % FOR RESUME
-\item Analyzed simulated and experimental datasets to classify different background.
+\item Designed new Monte Carlo simulation program using C++ to impove the precision 
+\item Designed Monte Carlo simulation program using C++, analyzed large experimental datasets to classify different background using decision tree based methods, automated the analysis results visualization processes, and reported the finding.
+% \item Analyzed simulated and experimental datasets to classify different background.
 
 % FOR CV
 % % \item Analyzed simulated and experimental datasets to investigate the ambient background radiation. Developed an algorithm to reduce the background.
@@ -193,8 +244,8 @@
 % \item Maintained the extra-low temperature (77 K) environment by setting up liquid Nitrogen cooling system at Taiwan Power Company Nuclear Station II.
 % % \item Mined and analyzed large experimental datasets and helped to setup RAIDs for data storage.
 % \item Communicated across relevant governmental department and private companies.
-% % % \item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
-% % % \item Analyzed the kinematic distributions of the MC simulated events.
+% % \item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
+% % \item Analyzed the kinematic distributions of the MC simulated events.
 % % \item Helped the Tsinghua University to setup the China Jinping Underground Laboratory (CJPL) and built low ambient background shielding using 4 tons of Oxygen free copper bricks.
 \end{tightemize}
 \sectionsep
@@ -204,17 +255,20 @@
 \location{2006 - 2009 | Hsinchu, Taiwan}
 \begin{tightemize}
 % FOR RESUME
-\item Model data collection automation, parameterization, validation, documentation, and customer support.
+\item Completed an urgent project 2 months ahead of the normal schedule to save the contract. 
+\item Automated data collection processes to reduce the probability of making mistakes by manual operations and shorten 20\% of the measurement time.
+\item Led 3 projects and supported 4 projects to model 
+\item Performed model parameterization, validation, visualization, documentation, and customer support.
 
 % FOR CV
 % \item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model electrical characteristic parameterization, model accuracy validation, model documentation, and customer support.
 % % \item High-voltage SPICE model raw data collection automation, model parameterization, model accuracy and completeness validation, model documentation, and customer support.
 % \item Project leader for 3 projects, and supporter for 4 projects.
 % \item SPICE model specification, production planning and scheduling.
+% % \item Cross departments discussion about SPICE model specification, production planning and scheduling.
 % \item In charged of the Mix-mode and BCD HV SPICE Model projects with the following process technologies: 0.13 $\mu$m, 0.18 $\mu$m, 0.20 $\mu$m, 0.25 $\mu$m, 0.35 $\mu$m 0.5 $\mu$m, 0.60 $\mu$m.
 % % \item Modeling MOSFET, BJT, Diode, Resistor, Capacitor, Back-end etc.
 % \item Tested the newly installed probe station and programmed to set up the automation reducing 20\% of the measurement time.
-% % \item Cross departments discussion about SPICE model specification, production planning and scheduling.
 \end{tightemize}
 \sectionsep
 
@@ -239,6 +293,8 @@
 % \item Published 4 journal papers and 5 conference notes, 18 internal notes, and presented in 2 conferences.
 % FOR RESUME
 \item Published 4 top journal papers and 5 conference notes, and presented in 2 conferences.
+\item 6 semesters teaching assistant for college and graduate level courses.
+% \item Been president of Taiwanese Student Association (TSA) and orginalized several TSA on campus events.
 \end{tightemize}
 \sectionsep
 
@@ -364,13 +420,15 @@
 % \section{Skills}
 
 % \location{Languages:}
-% C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script\\
+% C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, R, VBA\\
 % \location{Framework:}
 % ROOT, HistFitter\\
 % \location{Database:}
 % SQL\\
 % \location{Tools:}
 % Git, SVN, Vim, \LaTeX, HTML, Markdown, MicroSoft Office, Apple Pages/Numbers/Keynote\\
+% \location{Machin Learning:}
+% kNN, linear/logistic regression, decision tree, SVM, k-Means\\
 % \location{OS:}
 % Mac, Linux, Unix, Windows\\
 % \sectionsep
